--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,10 @@
         android:layout_height="wrap_content" android:id="@+id/buttonRefreshPoints"
         android:onClick="refreshPoints"
     />
+    <Button
+            android:text="get points from traccar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/buttonGetTraccarPoints"
+            android:onClick="getTraccarPoints"
+    />
 </LinearLayout>
