--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="textMultiLine"
+                android:focusable="false"
                 android:gravity="start|top"
                 android:ems="10"
                 android:id="@+id/logEdit"/>
@@ -24,16 +25,10 @@
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:orientation="vertical">
             <Button
-                    android:text="init osmand api"
+                    android:text="get points from traccar"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/buttonInitApi"
-                    android:onClick="initOsmAndApi"
-            />
-            <Button
-                    android:text="move test point eastward"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/buttonMoveTestPoint"
-                    android:onClick="moveTestPoint"
+                    android:layout_height="wrap_content" android:id="@+id/buttonGetTraccarPoints"
+                    android:onClick="getTraccarPoints"
             />
             <Button
                     android:text="refresh points"
@@ -42,16 +37,22 @@
                     android:onClick="refreshPoints"
             />
             <Button
+                    android:text="clear points"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/buttonClearPoints"
+                    android:onClick="clearPoints"
+            />
+            <Button
                     android:text="display test point"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/buttonDisplayTestPoint"
                     android:onClick="displayTestPoint"
             />
             <Button
-                    android:text="get points from traccar"
+                    android:text="move test point eastward"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/buttonGetTraccarPoints"
-                    android:onClick="getTraccarPoints"
+                    android:layout_height="wrap_content" android:id="@+id/buttonMoveTestPoint"
+                    android:onClick="moveTestPoint"
             />
         </LinearLayout>
     </ScrollView>
