--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,36 +30,22 @@
                     android:layout_height="wrap_content" android:id="@+id/buttonTraccarLogin"
                     android:onClick="traccarLogin"
             />
-            <Button
-                    android:text="get points from traccar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/buttonGetTraccarPoints"
-                    android:onClick="getTraccarPoints"
-            />
-            <Button
-                    android:text="refresh points"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/buttonRefreshPoints"
-                    android:onClick="refreshPoints"
-            />
-            <Button
-                    android:text="clear points"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/buttonClearPoints"
-                    android:onClick="clearPoints"
-            />
-            <Button
-                    android:text="display test point"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/buttonDisplayTestPoint"
-                    android:onClick="displayTestPoint"
-            />
-            <Button
-                    android:text="move test point eastward"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/buttonMoveTestPoint"
-                    android:onClick="moveTestPoint"
-            />
+            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <Button
+                            android:text="connect"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/buttonTraccarConnect"
+                            android:onClick="traccarConnect"
+                    />
+                    <Button
+                            android:text="disconnect"
+                            android:enabled="false"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/buttonTraccarDisconnect"
+                            android:onClick="traccarDisconnect"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
