action to show osmand

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,13 @@
                         android:onClick="requestStopService"
                 />
             </LinearLayout>
+            <Button
+                    android:text="show OsmAnd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/buttonShowOsmAnd"
+                    android:enabled="false"
+                    android:onClick="showOsmAnd"
+            />
         </LinearLayout>
         </LinearLayout>
     </ScrollView>
